--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.0.4",
     "@nestjs/typeorm": "^8.0.3",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
